Development Portal (2015-11-12 shi)
==============================
Added Result subheader to SAVi
Update CSS for themes


Development Portal (2015-11-10 shi)
==============================
SAVi results CSS to include new attributes
Include result types, description, target, actual, periods
Update Print Friendly CSS
Update rgba themes CSS with new attributes
Fixed related document list CSS


Development Portal (2015-11-05 shi)
==============================
Added new footer text for publisher_countries


Development Portal (2015-11-04 shi)
==============================
Clear links for publisher tables, year total columns
Update CSS for year total columns


Development Portal (2015-10-27 shi)
==============================
Changed 'available' to 'total' for org budget column
Updated translations accordingly


Development Portal (2015-10-12 shi)
==============================
Added org files to CRS publisher tables
Fixed year range for new org file columns


Development Portal (2015-10-08 shi)
==============================
Added org file budget text
Added translations for budget columns


Development Portal (2015-09-25 shi)
==============================
Changed description titles for Result in SAVi


Development Portal (2015-09-25 shi)
==============================
Change 'Missing' to 'Other'
Update 'Other' projects description
Updated translations


Development Portal (2015-09-10 shi)
==============================
Map link minor CSS fix


Development Portal (2015-09-03 shi)
==============================
Changed settings text visible next to cog icon
Changed View map link on main pages to entire div
Hide beige alert across site
Fixed lists in SAVi for Firefox (CSS counters)
Search view margin fix


Development Portal (2015-09-02 shi)
==============================
Changed BETA to badge status
Updated new badge status across site
Fix Generator layout issues


Development Portal (2015-07-24 shi)
==============================
Reorganised Search queries layout