@@ -103,6 +103,7 @@ span.span_description description[type="2"]:before	{content:"OBJECTIVES"; font-s
 span.span_description description[type="3"]:before	{content:"TARGET GROUPS"; font-size:14px; color:#000; display:block;}
 span.span_description description:last-of-type		{padding-bottom:40px; border-bottom:1px solid #000; border-top:0;}
 span.span_description description:nth-of-type(2)	{border-top:0;}
+span.span_description description:nth-child(1)		{border-top:1px solid #000;}
 
 
 /*	Result and description
@@ -115,8 +116,8 @@ result description			{padding:0 40px;}
 result description narrative {padding:10px 0;}
 result span-title			{display:block; font-size:30px; width:880px; line-height:1.25em; margin:0 auto; color:#000;}
 result span-title narrative	{display:block; padding:10px 0;}
-result:nth-of-type(1):before {content:"Result"; font-size:26px; color:#FFF; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
-result span-title:before	{content:"RESULT"; font-size:14px; color:#000; display:block; margin-bottom:15px;}
+result:nth-of-type(1):before {content:"Results"; font-size:26px; color:#FFF; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
+result span-title:before	{content:"RESULTS"; font-size:14px; color:#000; display:block; margin-bottom:15px;}
 result[type="1"] span-title:before	{content:"OUTPUT";}
 result[type="2"] span-title:before	{content:"OUTCOME";}
 result[type="3"] span-title:before	{content:"IMPACT";}
@@ -161,7 +162,7 @@ img.sector_pie					{padding:40px 20px;}
 budget	{display:block; width:958px; border-top:1px solid #000; padding:20px 0; border-bottom:0;}
 budget:last-of-type	  {border-bottom:0px solid #000;}
 budget:nth-of-type(1) {margin-top:0px; padding-top:0;}
-budget:nth-of-type(1):before {content:"Budget"; font-size:26px; color:#fff; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
+budget:nth-of-type(1):before {content:"Budgets"; font-size:26px; color:#fff; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
 budget:nth-of-type(1) period-start:before {content:"START DATE"; font-size:14px; color:#000; width:289px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 budget:nth-of-type(1) period-end:before	  {content:"END DATE"; font-size:14px; color:#000; width:289px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 budget:nth-of-type(1) value:before		  {content:"VALUE"; font-size:14px; color:#000; width:300px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
@@ -177,7 +178,7 @@ transaction a						{color:#000;}
 transaction a:hover					{color:#000;}
 transaction:last-of-type			{border-bottom:1px solid #000;}
 transaction:nth-of-type(1)			{margin-top:0px; padding-top:0;}
-transaction:nth-of-type(1):before	{content:"Transaction"; font-size:26px; color:#fff; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
+transaction:nth-of-type(1):before	{content:"Transactions"; font-size:26px; color:#fff; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
 
 transaction:nth-of-type(1) transaction-date:before	{content:"DATE"; font-size:14px; color:#000; width:105px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 transaction:nth-of-type(1) transaction-type:before	{content:"TYPE"; font-size:14px; color:#000; width:144px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
