@@ -104,8 +104,8 @@ result description			{padding:0 40px;}
 result description narrative {padding:10px 0;}
 result span-title			{display:block; font-size:30px; width:880px; line-height:1.25em; margin:0 auto; color:#FFF;}
 result span-title narrative	{display:block; padding:10px 0;}
-result:nth-of-type(1):before {content:"Result"; font-size:26px; color:#FFF; background-color:rgba(17,46,105,0.9); display:block; padding:20px 40px; margin-bottom:25px;}
-result span-title:before	{content:"RESULT"; font-size:14px; color:#ccc; display:block; margin-bottom:15px;}
+result:nth-of-type(1):before {content:"Results"; font-size:26px; color:#FFF; background-color:rgba(17,46,105,0.9); display:block; padding:20px 40px; margin-bottom:25px;}
+result span-title:before	{content:"RESULTS"; font-size:14px; color:#ccc; display:block; margin-bottom:15px;}
 result[type="1"] span-title:before	{content:"OUTPUT";}
 result[type="2"] span-title:before	{content:"OUTCOME";}
 result[type="3"] span-title:before	{content:"IMPACT";}
@@ -150,7 +150,7 @@ img.sector_pie					{padding:40px; background-color:#FFF;}
 budget					{display:block; width:960px; border-top:1px solid #1E90FF; padding:20px 0; border-bottom:0;}
 budget:last-of-type	 	{border-bottom:0px solid #1E90FF;}
 budget:nth-of-type(1)	{margin-top:0px; padding-top:0;}
-budget:nth-of-type(1):before				{content:"Budget"; font-size:26px; color:#FFF; background-color:rgba(17, 46, 105, 0.9); display:block; padding:20px 40px; margin-bottom:25px;}
+budget:nth-of-type(1):before				{content:"Budgets"; font-size:26px; color:#FFF; background-color:rgba(17, 46, 105, 0.9); display:block; padding:20px 40px; margin-bottom:25px;}
 budget:nth-of-type(1) period-start:before 	{content:"START DATE"; font-size:14px; color:#FFF; width:290px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
 budget:nth-of-type(1) period-end:before	  	{content:"END DATE"; font-size:14px; color:#FFF; width:290px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
 budget:nth-of-type(1) value:before		  	{content:"VALUE"; font-size:14px; color:#FFF; width:300px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
@@ -166,7 +166,7 @@ transaction a						{color:#FF7A00;}
 transaction a:hover					{color:#FFAB5E;}
 transaction:last-of-type			{border-bottom:1px solid #1E90FF;}
 transaction:nth-of-type(1)			{margin-top:0px; padding-top:0;}
-transaction:nth-of-type(1):before	{content:"Transaction"; font-size:26px; color:#FFF; background-color:rgba(17, 46, 105, 0.9); display:block; padding:20px 40px; margin-bottom:25px;}
+transaction:nth-of-type(1):before	{content:"Transactions"; font-size:26px; color:#FFF; background-color:rgba(17, 46, 105, 0.9); display:block; padding:20px 40px; margin-bottom:25px;}
 
 transaction:nth-of-type(1) transaction-date:before	{content:"DATE"; font-size:14px; color:#FFF; width:105px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
 transaction:nth-of-type(1) transaction-type:before	{content:"TYPE"; font-size:14px; color:#FFF; width:145px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
