@@ -2,6 +2,7 @@ Development Portal (2015-11-12 shi)
 ==============================
 Added Result subheader to SAVi
 Update CSS for themes
+Plural for Results, Budgets and Transactions
 
 
 Development Portal (2015-11-10 shi)
